src/grammars/lambda_expParser.py
# Generated from grammars/lambda_exp.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class lambda_expParser ( Parser ):

    grammarFileName = "lambda_exp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'lambda'", "'.'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VAR", "WS" ]

    RULE_expression = 0
    RULE_function = 1
    RULE_application = 2

    ruleNames =  [ "expression", "function", "application" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    VAR=5
    WS=6

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lambda_expParser.VAR, 0)

        def function(self):
            return self.getTypedRuleContext(lambda_expParser.FunctionContext,0)


        def application(self):
            return self.getTypedRuleContext(lambda_expParser.ApplicationContext,0)


        def getRuleIndex(self):
            return lambda_expParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = lambda_expParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expression)
        try:
            self.state = 9
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lambda_expParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 6
                self.match(lambda_expParser.VAR)
                pass
            elif token in [lambda_expParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 7
                self.function()
                pass
            elif token in [lambda_expParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 8
                self.application()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(lambda_expParser.VAR, 0)

        def expression(self):
            return self.getTypedRuleContext(lambda_expParser.ExpressionContext,0)


        def getRuleIndex(self):
            return lambda_expParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = lambda_expParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self.match(lambda_expParser.T__0)
            self.state = 12
            self.match(lambda_expParser.VAR)
            self.state = 13
            self.match(lambda_expParser.T__1)
            self.state = 14
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApplicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lambda_expParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lambda_expParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lambda_expParser.RULE_application

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplication" ):
                listener.enterApplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplication" ):
                listener.exitApplication(self)




    def application(self):

        localctx = lambda_expParser.ApplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_application)
        try:
            self.state = 25
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.match(lambda_expParser.T__2)
                self.state = 17
                self.expression()
                self.state = 18
                self.expression()
                self.state = 19
                self.match(lambda_expParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.match(lambda_expParser.T__2)
                self.state = 22
                self.expression()
                self.state = 23
                self.match(lambda_expParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





